--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,9 +12,9 @@
 
 
 <ul>
-    <li> <a href="http://localhost:8080/doctor/1"> Premier doc  </a> </li>
-    <li> <a href="http://localhost:8080/doctor/10"> Deuxieme doc  </a></li>
-    <li><a href="http://localhost:8080/doctor/13"> Troisieme doc  </a></li>
+    <li> <a href="doctor/1"> Premier doc  </a> </li>
+    <li> <a href="doctor/10"> Deuxieme doc  </a></li>
+    <li><a href="doctor/13"> Troisieme doc  </a></li>
 </ul>
 <script src="js/script.js"></script>
 </body>
